3rd - Lexical + Syntactic Analyzer + Assembly(MIPS) Code Generator/code/3rd/test.output
Terminals unused in grammar

    ASSIGN
    LOGICOP_3


Grammar

    0 $accept: Program $end

    1 Program: DeclarationList

    2 DeclarationList: Type_Declaration DeclarationList
    3                | Main_Function

    4 Type_Declaration: Var_Types Declaration
    5                 | VOIDTYPE FuncDeclaration

    6 Declaration: VarDeclaration
    7            | FuncDeclaration

    8 FuncDeclaration: ID LEFTPAREN Func_Arg RIGHTPAREN CompoundStmt

    9 VarDeclaration: IdentList_Dec SEMICOLON

   10 IdentList_Dec: ID ASSIGNOP Expr COMMA IdentList_Dec
   11              | ID ASSIGNOP Expr

   12 Main_Function: Func_Types MAINFUNC LEFTPAREN Func_Arg RIGHTPAREN CompoundStmt

   13 Func_Arg: Func_ArgList
   14         | %empty

   15 Func_ArgList: Func_ArgList COMMA Func_ArgList_Type
   16             | Func_ArgList_Type

   17 Func_ArgList_Type: Var_Types ID Array_Var

   18 Func_Types: VOIDTYPE
   19           | INTTYPE
   20           | DOUBLETYPE
   21           | FLOATTYPE
   22           | STRINGTYPE
   23           | CHARTYPE

   24 Var_Types: INTTYPE
   25          | DOUBLETYPE
   26          | FLOATTYPE
   27          | STRINGTYPE
   28          | CHARTYPE

   29 CompoundStmt: LCB StmtList RCB

   30 StmtList: StmtList Stmt
   31         | %empty

   32 Stmt: ForStmt
   33     | IfStmt
   34     | Expr SEMICOLON
   35     | CompoundStmt
   36     | Local_Vars SEMICOLON
   37     | RETURN SEMICOLON
   38     | BREAK SEMICOLON
   39     | CONTINUE SEMICOLON
   40     | RETURN Expr SEMICOLON
   41     | Print SEMICOLON
   42     | Call SEMICOLON
   43     | SEMICOLON

   44 ForStmt: FOREACH IdTemp LEFTPAREN Expr UNTIL Expr RIGHTPAREN CompoundStmt

   45 IdTemp: ID

   46 IfStmt: IF LEFTPAREN Expr RIGHTPAREN CompoundStmt ElsePart

   47 ElsePart: ELSE CompoundStmt
   48         | %empty

   49 Local_Vars: Var_Types IdentList

   50 IdentList: ID IdentList_DeforDec COMMA IdentList
   51          | ID IdentList_DeforDec

   52 IdentList_DeforDec: ASSIGNOP Expr
   53                   | Array_Var

   54 Print: PRINTFUNC LEFTPAREN Mutable RIGHTPAREN

   55 Call: ID LEFTPAREN Call_ArgList RIGHTPAREN

   56 Call_ArgList: Call_ArgList COMMA Expr
   57             | Expr
   58             | %empty

   59 Expr: ID Array_Var ASSIGNOP ExprLogical
   60     | ExprLogical

   61 ExprLogical: ExprLogical LOGICOP_2 ExprBinary
   62            | ExprLogical LOGICOP_1 ExprBinary
   63            | ExprBinary

   64 ExprBinary: ExprBinary BITWISEOP_2 Rvalue
   65           | ExprBinary ARITHMATICOP_5 Rvalue
   66           | ExprBinary BITWISEOP_1 Rvalue
   67           | Rvalue

   68 Rvalue: Rvalue Compare_1 Mag
   69       | Rvalue Compare_2 Mag
   70       | Mag

   71 Compare_1: RELATIONOP_3
   72          | RELATIONOP_1
   73          | RELATIONOP_2

   74 Compare_2: RELATIONOP_5
   75          | RELATIONOP_6
   76          | RELATIONOP_4

   77 Mag: Mag ARITHMATICOP_1 Term
   78    | Mag ARITHMATICOP_2 Term
   79    | Term

   80 Term: Term ARITHMATICOP_3 Factor
   81     | Term ARITHMATICOP_4 Factor
   82     | Factor

   83 Factor: LEFTPAREN Expr RIGHTPAREN
   84       | ARITHMATICOP_2 Factor
   85       | ARITHMATICOP_1 Factor
   86       | Mutable

   87 Mutable: Const
   88        | ID Array_Var

   89 Const: FLOATCONST
   90      | STRINGCONST
   91      | CHARCONST
   92      | INTCONST

   93 Array_Var: %empty
   94          | LB INTCONST RB
   95          | LB RB


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FLOATCONST <eVal> (258) 89
    STRINGCONST <eVal> (259) 90
    CHARCONST <eVal> (260) 91
    INTCONST <eVal> (261) 92 94
    FLOATTYPE <eVal> (262) 21 26
    VOIDTYPE <eVal> (263) 5 18
    INTTYPE <eVal> (264) 19 24
    DOUBLETYPE <eVal> (265) 20 25
    STRINGTYPE <eVal> (266) 22 27
    CHARTYPE <eVal> (267) 23 28
    RETURN <eVal> (268) 37 40
    MAINFUNC <eVal> (269) 12
    ID <eVal> (270) 8 10 11 17 45 50 51 55 59 88
    ASSIGNOP <eVal> (271) 10 11 52 59
    LEFTPAREN <eVal> (272) 8 12 44 46 54 55 83
    RIGHTPAREN <eVal> (273) 8 12 44 46 54 55 83
    LCB <eVal> (274) 29
    RCB <eVal> (275) 29
    SEMICOLON <eVal> (276) 9 34 36 37 38 39 40 41 42 43
    COMMA <eVal> (277) 10 15 50 56
    UNTIL <eVal> (278) 44
    LB <eVal> (279) 94 95
    RB <eVal> (280) 94 95
    ELSE <eVal> (281) 47
    IF <eVal> (282) 46
    ARITHMATICOP_1 <eVal> (283) 77 85
    ARITHMATICOP_2 <eVal> (284) 78 84
    ARITHMATICOP_3 <eVal> (285) 80
    ARITHMATICOP_4 <eVal> (286) 81
    ARITHMATICOP_5 <eVal> (287) 65
    ASSIGN <eVal> (288)
    BITWISEOP_1 <eVal> (289) 66
    BITWISEOP_2 <eVal> (290) 64
    BREAK <eVal> (291) 38
    CONTINUE <eVal> (292) 39
    FOREACH <eVal> (293) 44
    LOGICOP_1 <eVal> (294) 62
    LOGICOP_2 <eVal> (295) 61
    LOGICOP_3 <eVal> (296)
    PRINTFUNC <eVal> (297) 54
    RELATIONOP_1 <eVal> (298) 72
    RELATIONOP_2 <eVal> (299) 73
    RELATIONOP_3 <eVal> (300) 71
    RELATIONOP_4 <eVal> (301) 76
    RELATIONOP_5 <eVal> (302) 74
    RELATIONOP_6 <eVal> (303) 75


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    Program <eVal> (50)
        on left: 1
        on right: 0
    DeclarationList <eVal> (51)
        on left: 2 3
        on right: 1 2
    Type_Declaration <eVal> (52)
        on left: 4 5
        on right: 2
    Declaration <eVal> (53)
        on left: 6 7
        on right: 4
    FuncDeclaration <eVal> (54)
        on left: 8
        on right: 5 7
    VarDeclaration <eVal> (55)
        on left: 9
        on right: 6
    IdentList_Dec <eVal> (56)
        on left: 10 11
        on right: 9 10
    Main_Function <eVal> (57)
        on left: 12
        on right: 3
    Func_Arg <eVal> (58)
        on left: 13 14
        on right: 8 12
    Func_ArgList <eVal> (59)
        on left: 15 16
        on right: 13 15
    Func_ArgList_Type <eVal> (60)
        on left: 17
        on right: 15 16
    Func_Types <eVal> (61)
        on left: 18 19 20 21 22 23
        on right: 12
    Var_Types <eVal> (62)
        on left: 24 25 26 27 28
        on right: 4 17 49
    CompoundStmt <eVal> (63)
        on left: 29
        on right: 8 12 35 44 46 47
    StmtList <eVal> (64)
        on left: 30 31
        on right: 29 30
    Stmt <eVal> (65)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 30
    ForStmt <eVal> (66)
        on left: 44
        on right: 32
    IdTemp <eVal> (67)
        on left: 45
        on right: 44
    IfStmt <eVal> (68)
        on left: 46
        on right: 33
    ElsePart <eVal> (69)
        on left: 47 48
        on right: 46
    Local_Vars <eVal> (70)
        on left: 49
        on right: 36
    IdentList <eVal> (71)
        on left: 50 51
        on right: 49 50
    IdentList_DeforDec <eVal> (72)
        on left: 52 53
        on right: 50 51
    Print <eVal> (73)
        on left: 54
        on right: 41
    Call <eVal> (74)
        on left: 55
        on right: 42
    Call_ArgList <eVal> (75)
        on left: 56 57 58
        on right: 55 56
    Expr <eVal> (76)
        on left: 59 60
        on right: 10 11 34 40 44 46 52 56 57 83
    ExprLogical <eVal> (77)
        on left: 61 62 63
        on right: 59 60 61 62
    ExprBinary <eVal> (78)
        on left: 64 65 66 67
        on right: 61 62 63 64 65 66
    Rvalue <eVal> (79)
        on left: 68 69 70
        on right: 64 65 66 67 68 69
    Compare_1 <eVal> (80)
        on left: 71 72 73
        on right: 68
    Compare_2 <eVal> (81)
        on left: 74 75 76
        on right: 69
    Mag <eVal> (82)
        on left: 77 78 79
        on right: 68 69 70 77 78
    Term <eVal> (83)
        on left: 80 81 82
        on right: 77 78 79 80 81
    Factor <eVal> (84)
        on left: 83 84 85 86
        on right: 80 81 82 84 85
    Mutable <eVal> (85)
        on left: 87 88
        on right: 54 86
    Const <eVal> (86)
        on left: 89 90 91 92
        on right: 87
    Array_Var <eVal> (87)
        on left: 93 94 95
        on right: 17 53 59 88


State 0

    0 $accept: . Program $end

    FLOATTYPE   shift, and go to state 1
    VOIDTYPE    shift, and go to state 2
    INTTYPE     shift, and go to state 3
    DOUBLETYPE  shift, and go to state 4
    STRINGTYPE  shift, and go to state 5
    CHARTYPE    shift, and go to state 6

    Program           go to state 7
    DeclarationList   go to state 8
    Type_Declaration  go to state 9
    Main_Function     go to state 10
    Func_Types        go to state 11
    Var_Types         go to state 12


State 1

   21 Func_Types: FLOATTYPE .
   26 Var_Types: FLOATTYPE .

    ID        reduce using rule 26 (Var_Types)
    $default  reduce using rule 21 (Func_Types)


State 2

    5 Type_Declaration: VOIDTYPE . FuncDeclaration
   18 Func_Types: VOIDTYPE .

    ID  shift, and go to state 13

    $default  reduce using rule 18 (Func_Types)

    FuncDeclaration  go to state 14


State 3

   19 Func_Types: INTTYPE .
   24 Var_Types: INTTYPE .

    ID        reduce using rule 24 (Var_Types)
    $default  reduce using rule 19 (Func_Types)


State 4

   20 Func_Types: DOUBLETYPE .
   25 Var_Types: DOUBLETYPE .

    ID        reduce using rule 25 (Var_Types)
    $default  reduce using rule 20 (Func_Types)


State 5

   22 Func_Types: STRINGTYPE .
   27 Var_Types: STRINGTYPE .

    ID        reduce using rule 27 (Var_Types)
    $default  reduce using rule 22 (Func_Types)


State 6

   23 Func_Types: CHARTYPE .
   28 Var_Types: CHARTYPE .

    ID        reduce using rule 28 (Var_Types)
    $default  reduce using rule 23 (Func_Types)


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 8

    1 Program: DeclarationList .

    $default  reduce using rule 1 (Program)


State 9

    2 DeclarationList: Type_Declaration . DeclarationList

    FLOATTYPE   shift, and go to state 1
    VOIDTYPE    shift, and go to state 2
    INTTYPE     shift, and go to state 3
    DOUBLETYPE  shift, and go to state 4
    STRINGTYPE  shift, and go to state 5
    CHARTYPE    shift, and go to state 6

    DeclarationList   go to state 16
    Type_Declaration  go to state 9
    Main_Function     go to state 10
    Func_Types        go to state 11
    Var_Types         go to state 12


State 10

    3 DeclarationList: Main_Function .

    $default  reduce using rule 3 (DeclarationList)


State 11

   12 Main_Function: Func_Types . MAINFUNC LEFTPAREN Func_Arg RIGHTPAREN CompoundStmt

    MAINFUNC  shift, and go to state 17


State 12

    4 Type_Declaration: Var_Types . Declaration

    ID  shift, and go to state 18

    Declaration      go to state 19
    FuncDeclaration  go to state 20
    VarDeclaration   go to state 21
    IdentList_Dec    go to state 22


State 13

    8 FuncDeclaration: ID . LEFTPAREN Func_Arg RIGHTPAREN CompoundStmt

    LEFTPAREN  shift, and go to state 23


State 14

    5 Type_Declaration: VOIDTYPE FuncDeclaration .

    $default  reduce using rule 5 (Type_Declaration)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    2 DeclarationList: Type_Declaration DeclarationList .

    $default  reduce using rule 2 (DeclarationList)


State 17

   12 Main_Function: Func_Types MAINFUNC . LEFTPAREN Func_Arg RIGHTPAREN CompoundStmt

    LEFTPAREN  shift, and go to state 24


State 18

    8 FuncDeclaration: ID . LEFTPAREN Func_Arg RIGHTPAREN CompoundStmt
   10 IdentList_Dec: ID . ASSIGNOP Expr COMMA IdentList_Dec
   11              | ID . ASSIGNOP Expr

    ASSIGNOP   shift, and go to state 25
    LEFTPAREN  shift, and go to state 23


State 19

    4 Type_Declaration: Var_Types Declaration .

    $default  reduce using rule 4 (Type_Declaration)


State 20

    7 Declaration: FuncDeclaration .

    $default  reduce using rule 7 (Declaration)


State 21

    6 Declaration: VarDeclaration .

    $default  reduce using rule 6 (Declaration)


State 22

    9 VarDeclaration: IdentList_Dec . SEMICOLON

    SEMICOLON  shift, and go to state 26


State 23

    8 FuncDeclaration: ID LEFTPAREN . Func_Arg RIGHTPAREN CompoundStmt

    FLOATTYPE   shift, and go to state 27
    INTTYPE     shift, and go to state 28
    DOUBLETYPE  shift, and go to state 29
    STRINGTYPE  shift, and go to state 30
    CHARTYPE    shift, and go to state 31

    $default  reduce using rule 14 (Func_Arg)

    Func_Arg           go to state 32
    Func_ArgList       go to state 33
    Func_ArgList_Type  go to state 34
    Var_Types          go to state 35


State 24

   12 Main_Function: Func_Types MAINFUNC LEFTPAREN . Func_Arg RIGHTPAREN CompoundStmt

    FLOATTYPE   shift, and go to state 27
    INTTYPE     shift, and go to state 28
    DOUBLETYPE  shift, and go to state 29
    STRINGTYPE  shift, and go to state 30
    CHARTYPE    shift, and go to state 31

    $default  reduce using rule 14 (Func_Arg)

    Func_Arg           go to state 36
    Func_ArgList       go to state 33
    Func_ArgList_Type  go to state 34
    Var_Types          go to state 35


State 25

   10 IdentList_Dec: ID ASSIGNOP . Expr COMMA IdentList_Dec
   11              | ID ASSIGNOP . Expr

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 41
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Expr         go to state 45
    ExprLogical  go to state 46
    ExprBinary   go to state 47
    Rvalue       go to state 48
    Mag          go to state 49
    Term         go to state 50
    Factor       go to state 51
    Mutable      go to state 52
    Const        go to state 53


State 26

    9 VarDeclaration: IdentList_Dec SEMICOLON .

    $default  reduce using rule 9 (VarDeclaration)


State 27

   26 Var_Types: FLOATTYPE .

    $default  reduce using rule 26 (Var_Types)


State 28

   24 Var_Types: INTTYPE .

    $default  reduce using rule 24 (Var_Types)


State 29

   25 Var_Types: DOUBLETYPE .

    $default  reduce using rule 25 (Var_Types)


State 30

   27 Var_Types: STRINGTYPE .

    $default  reduce using rule 27 (Var_Types)


State 31

   28 Var_Types: CHARTYPE .

    $default  reduce using rule 28 (Var_Types)


State 32

    8 FuncDeclaration: ID LEFTPAREN Func_Arg . RIGHTPAREN CompoundStmt

    RIGHTPAREN  shift, and go to state 54


State 33

   13 Func_Arg: Func_ArgList .
   15 Func_ArgList: Func_ArgList . COMMA Func_ArgList_Type

    COMMA  shift, and go to state 55

    $default  reduce using rule 13 (Func_Arg)


State 34

   16 Func_ArgList: Func_ArgList_Type .

    $default  reduce using rule 16 (Func_ArgList)


State 35

   17 Func_ArgList_Type: Var_Types . ID Array_Var

    ID  shift, and go to state 56


State 36

   12 Main_Function: Func_Types MAINFUNC LEFTPAREN Func_Arg . RIGHTPAREN CompoundStmt

    RIGHTPAREN  shift, and go to state 57


State 37

   89 Const: FLOATCONST .

    $default  reduce using rule 89 (Const)


State 38

   90 Const: STRINGCONST .

    $default  reduce using rule 90 (Const)


State 39

   91 Const: CHARCONST .

    $default  reduce using rule 91 (Const)


State 40

   92 Const: INTCONST .

    $default  reduce using rule 92 (Const)


State 41

   59 Expr: ID . Array_Var ASSIGNOP ExprLogical
   88 Mutable: ID . Array_Var

    LB  shift, and go to state 58

    $default  reduce using rule 93 (Array_Var)

    Array_Var  go to state 59


State 42

   83 Factor: LEFTPAREN . Expr RIGHTPAREN

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 41
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Expr         go to state 60
    ExprLogical  go to state 46
    ExprBinary   go to state 47
    Rvalue       go to state 48
    Mag          go to state 49
    Term         go to state 50
    Factor       go to state 51
    Mutable      go to state 52
    Const        go to state 53


State 43

   85 Factor: ARITHMATICOP_1 . Factor

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Factor   go to state 62
    Mutable  go to state 52
    Const    go to state 53


State 44

   84 Factor: ARITHMATICOP_2 . Factor

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Factor   go to state 63
    Mutable  go to state 52
    Const    go to state 53


State 45

   10 IdentList_Dec: ID ASSIGNOP Expr . COMMA IdentList_Dec
   11              | ID ASSIGNOP Expr .

    COMMA  shift, and go to state 64

    $default  reduce using rule 11 (IdentList_Dec)


State 46

   60 Expr: ExprLogical .
   61 ExprLogical: ExprLogical . LOGICOP_2 ExprBinary
   62            | ExprLogical . LOGICOP_1 ExprBinary

    LOGICOP_1  shift, and go to state 65
    LOGICOP_2  shift, and go to state 66

    $default  reduce using rule 60 (Expr)


State 47

   63 ExprLogical: ExprBinary .
   64 ExprBinary: ExprBinary . BITWISEOP_2 Rvalue
   65           | ExprBinary . ARITHMATICOP_5 Rvalue
   66           | ExprBinary . BITWISEOP_1 Rvalue

    ARITHMATICOP_5  shift, and go to state 67
    BITWISEOP_1     shift, and go to state 68
    BITWISEOP_2     shift, and go to state 69

    $default  reduce using rule 63 (ExprLogical)


State 48

   67 ExprBinary: Rvalue .
   68 Rvalue: Rvalue . Compare_1 Mag
   69       | Rvalue . Compare_2 Mag

    RELATIONOP_1  shift, and go to state 70
    RELATIONOP_2  shift, and go to state 71
    RELATIONOP_3  shift, and go to state 72
    RELATIONOP_4  shift, and go to state 73
    RELATIONOP_5  shift, and go to state 74
    RELATIONOP_6  shift, and go to state 75

    $default  reduce using rule 67 (ExprBinary)

    Compare_1  go to state 76
    Compare_2  go to state 77


State 49

   70 Rvalue: Mag .
   77 Mag: Mag . ARITHMATICOP_1 Term
   78    | Mag . ARITHMATICOP_2 Term

    ARITHMATICOP_1  shift, and go to state 78
    ARITHMATICOP_2  shift, and go to state 79

    $default  reduce using rule 70 (Rvalue)


State 50

   79 Mag: Term .
   80 Term: Term . ARITHMATICOP_3 Factor
   81     | Term . ARITHMATICOP_4 Factor

    ARITHMATICOP_3  shift, and go to state 80
    ARITHMATICOP_4  shift, and go to state 81

    $default  reduce using rule 79 (Mag)


State 51

   82 Term: Factor .

    $default  reduce using rule 82 (Term)


State 52

   86 Factor: Mutable .

    $default  reduce using rule 86 (Factor)


State 53

   87 Mutable: Const .

    $default  reduce using rule 87 (Mutable)


State 54

    8 FuncDeclaration: ID LEFTPAREN Func_Arg RIGHTPAREN . CompoundStmt

    LCB  shift, and go to state 82

    CompoundStmt  go to state 83


State 55

   15 Func_ArgList: Func_ArgList COMMA . Func_ArgList_Type

    FLOATTYPE   shift, and go to state 27
    INTTYPE     shift, and go to state 28
    DOUBLETYPE  shift, and go to state 29
    STRINGTYPE  shift, and go to state 30
    CHARTYPE    shift, and go to state 31

    Func_ArgList_Type  go to state 84
    Var_Types          go to state 35


State 56

   17 Func_ArgList_Type: Var_Types ID . Array_Var

    LB  shift, and go to state 58

    $default  reduce using rule 93 (Array_Var)

    Array_Var  go to state 85


State 57

   12 Main_Function: Func_Types MAINFUNC LEFTPAREN Func_Arg RIGHTPAREN . CompoundStmt

    LCB  shift, and go to state 82

    CompoundStmt  go to state 86


State 58

   94 Array_Var: LB . INTCONST RB
   95          | LB . RB

    INTCONST  shift, and go to state 87
    RB        shift, and go to state 88


State 59

   59 Expr: ID Array_Var . ASSIGNOP ExprLogical
   88 Mutable: ID Array_Var .

    ASSIGNOP  shift, and go to state 89

    $default  reduce using rule 88 (Mutable)


State 60

   83 Factor: LEFTPAREN Expr . RIGHTPAREN

    RIGHTPAREN  shift, and go to state 90


State 61

   88 Mutable: ID . Array_Var

    LB  shift, and go to state 58

    $default  reduce using rule 93 (Array_Var)

    Array_Var  go to state 91


State 62

   85 Factor: ARITHMATICOP_1 Factor .

    $default  reduce using rule 85 (Factor)


State 63

   84 Factor: ARITHMATICOP_2 Factor .

    $default  reduce using rule 84 (Factor)


State 64

   10 IdentList_Dec: ID ASSIGNOP Expr COMMA . IdentList_Dec

    ID  shift, and go to state 92

    IdentList_Dec  go to state 93


State 65

   62 ExprLogical: ExprLogical LOGICOP_1 . ExprBinary

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    ExprBinary  go to state 94
    Rvalue      go to state 48
    Mag         go to state 49
    Term        go to state 50
    Factor      go to state 51
    Mutable     go to state 52
    Const       go to state 53


State 66

   61 ExprLogical: ExprLogical LOGICOP_2 . ExprBinary

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    ExprBinary  go to state 95
    Rvalue      go to state 48
    Mag         go to state 49
    Term        go to state 50
    Factor      go to state 51
    Mutable     go to state 52
    Const       go to state 53


State 67

   65 ExprBinary: ExprBinary ARITHMATICOP_5 . Rvalue

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Rvalue   go to state 96
    Mag      go to state 49
    Term     go to state 50
    Factor   go to state 51
    Mutable  go to state 52
    Const    go to state 53


State 68

   66 ExprBinary: ExprBinary BITWISEOP_1 . Rvalue

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Rvalue   go to state 97
    Mag      go to state 49
    Term     go to state 50
    Factor   go to state 51
    Mutable  go to state 52
    Const    go to state 53


State 69

   64 ExprBinary: ExprBinary BITWISEOP_2 . Rvalue

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Rvalue   go to state 98
    Mag      go to state 49
    Term     go to state 50
    Factor   go to state 51
    Mutable  go to state 52
    Const    go to state 53


State 70

   72 Compare_1: RELATIONOP_1 .

    $default  reduce using rule 72 (Compare_1)


State 71

   73 Compare_1: RELATIONOP_2 .

    $default  reduce using rule 73 (Compare_1)


State 72

   71 Compare_1: RELATIONOP_3 .

    $default  reduce using rule 71 (Compare_1)


State 73

   76 Compare_2: RELATIONOP_4 .

    $default  reduce using rule 76 (Compare_2)


State 74

   74 Compare_2: RELATIONOP_5 .

    $default  reduce using rule 74 (Compare_2)


State 75

   75 Compare_2: RELATIONOP_6 .

    $default  reduce using rule 75 (Compare_2)


State 76

   68 Rvalue: Rvalue Compare_1 . Mag

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Mag      go to state 99
    Term     go to state 50
    Factor   go to state 51
    Mutable  go to state 52
    Const    go to state 53


State 77

   69 Rvalue: Rvalue Compare_2 . Mag

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Mag      go to state 100
    Term     go to state 50
    Factor   go to state 51
    Mutable  go to state 52
    Const    go to state 53


State 78

   77 Mag: Mag ARITHMATICOP_1 . Term

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Term     go to state 101
    Factor   go to state 51
    Mutable  go to state 52
    Const    go to state 53


State 79

   78 Mag: Mag ARITHMATICOP_2 . Term

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Term     go to state 102
    Factor   go to state 51
    Mutable  go to state 52
    Const    go to state 53


State 80

   80 Term: Term ARITHMATICOP_3 . Factor

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Factor   go to state 103
    Mutable  go to state 52
    Const    go to state 53


State 81

   81 Term: Term ARITHMATICOP_4 . Factor

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    Factor   go to state 104
    Mutable  go to state 52
    Const    go to state 53


State 82

   29 CompoundStmt: LCB . StmtList RCB

    $default  reduce using rule 31 (StmtList)

    StmtList  go to state 105


State 83

    8 FuncDeclaration: ID LEFTPAREN Func_Arg RIGHTPAREN CompoundStmt .

    $default  reduce using rule 8 (FuncDeclaration)


State 84

   15 Func_ArgList: Func_ArgList COMMA Func_ArgList_Type .

    $default  reduce using rule 15 (Func_ArgList)


State 85

   17 Func_ArgList_Type: Var_Types ID Array_Var .

    $default  reduce using rule 17 (Func_ArgList_Type)


State 86

   12 Main_Function: Func_Types MAINFUNC LEFTPAREN Func_Arg RIGHTPAREN CompoundStmt .

    $default  reduce using rule 12 (Main_Function)


State 87

   94 Array_Var: LB INTCONST . RB

    RB  shift, and go to state 106


State 88

   95 Array_Var: LB RB .

    $default  reduce using rule 95 (Array_Var)


State 89

   59 Expr: ID Array_Var ASSIGNOP . ExprLogical

    FLOATCONST      shift, and go to state 37
    STRINGCONST     shift, and go to state 38
    CHARCONST       shift, and go to state 39
    INTCONST        shift, and go to state 40
    ID              shift, and go to state 61
    LEFTPAREN       shift, and go to state 42
    ARITHMATICOP_1  shift, and go to state 43
    ARITHMATICOP_2  shift, and go to state 44

    ExprLogical  go to state 107
    ExprBinary   go to state 47
    Rvalue       go to state 48
    Mag          go to state 49
    Term         go to state 50
    Factor       go to state 51
    Mutable      go to state 52
    Const        go to state 53


State 90

   83 Factor: LEFTPAREN Expr RIGHTPAREN .

    $default  reduce using rule 83 (Factor)


State 91

   88 Mutable: ID Array_Var .

    $default  reduce using rule 88 (Mutable)


State 92

   10 IdentList_Dec: ID . ASSIGNOP Expr COMMA IdentList_Dec
   11              | ID . ASSIGNOP Expr

    ASSIGNOP  shift, and go to state 25


State 93

   10 IdentList_Dec: ID ASSIGNOP Expr COMMA IdentList_Dec .

    $default  reduce using rule 10 (IdentList_Dec)


State 94

   62 ExprLogical: ExprLogical LOGICOP_1 ExprBinary .
   64 ExprBinary: ExprBinary . BITWISEOP_2 Rvalue
   65           | ExprBinary . ARITHMATICOP_5 Rvalue
   66           | ExprBinary . BITWISEOP_1 Rvalue

    ARITHMATICOP_5  shift, and go to state 67
    BITWISEOP_1     shift, and go to state 68
    BITWISEOP_2     shift, and go to state 69

    $default  reduce using rule 62 (ExprLogical)


State 95

   61 ExprLogical: ExprLogical LOGICOP_2 ExprBinary .
   64 ExprBinary: ExprBinary . BITWISEOP_2 Rvalue
   65           | ExprBinary . ARITHMATICOP_5 Rvalue
   66           | ExprBinary . BITWISEOP_1 Rvalue

    ARITHMATICOP_5  shift, and go to state 67
    BITWISEOP_1     shift, and go to state 68
    BITWISEOP_2     shift, and go to state 69

    $default  reduce using rule 61 (ExprLogical)


State 96

   65 ExprBinary: ExprBinary ARITHMATICOP_5 Rvalue .
   68 Rvalue: Rvalue . Compare_1 Mag
   69       | Rvalue . Compare_2 Mag
